# fusion-bench-project-template

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: code-quality-main.yaml  code-quality-pr.yaml
config/: main.yaml
config/method/: my_method.yaml
config/modelpool/: mlp_modelpool.yaml
config/taskpool/: my_taskpool.yaml
notebooks/: test_fusion_bench.ipynb
scripts/: run_experiments.sh
src/method/: __init__.py  my_algorithm.py
src/modelpool/: __init__.py  my_model_pool.py
src/models/: mlp.py
src/scripts/: cli.py
src/taskpool/: __init__.py  my_taskpool.py
tests/: test_fusion_bench.py
