[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fusion-bench-project-template"
description = "Describe Your Cool Project"
readme = "README.md"
version = "0.1.0"
authors = [{ name = "Anke Tang", email = "tang.anke@foxmail.com" }]
license = { file = 'LICENSE' }
requires-python = ">= 3.10"
dependencies = ["fusion-bench"]

[project.urls]
Repository = "https://github.com/fusion-bench/fusion-bench-project-template"
Homepage = "https://github.com/fusion-bench/fusion-bench-project-template"
Issues = "https://github.com/fusion-bench/fusion-bench-project-template/issues"

[tool.setuptools]
include-package-data = true
package-dir = { "src" = "src" }

[project.scripts]
run = "src.scripts.cli:main"

[tool.isort]
profile = "black"
